# JniStudy

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/open/jnistudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  native-lib.cpp
app/src/main/cpp/include/: LogUtil.h
app/src/main/cpp/util/: AndroidLog.h  LogUtil.h
app/src/main/java/com/open/jnistudy/: MainActivity.java
app/src/main/java/com/open/jnistudy/adapter/: HomeAdapter.java
app/src/main/java/com/open/jnistudy/bean/: ActivityBean.java
app/src/main/java/com/open/jnistudy/util/: LogUtil.java  ToastUtils.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/open/jnistudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
